# ur5e_ros_rl_sim

./: .gitmodules  CMakeLists.txt  README.md  package.xml  requirements.txt
launch/: run_simuilation.launch
scripts/: ddpg_ros.py  frames.gv  ppo_ros.py  ppo_ur5e_pick_and_place_norm  q_learning_ros.py  ur5e_gym_env.py
src/: ur5e_interface_node.cpp
