<?xml version="1.0"?>
<package format="2">
  <name>ur5e_rl_sim</name>
  <version>0.0.1</version>
  <description>Reinforcement learning for my robot</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="yourname@example.com">Your Name</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
